feat: 将 LINT 拆为独立的 Semgrep 与 Sonar 任务
代码检查不再挤在一个 kind 里靠环境变量 skip，用户按需添加任务，编译各走单一镜像。

Co-authored-by: Cursor <cursoragent@cursor.com>